[package]
name = "mixpanel_to_posthog"
version = "1.0.0"
edition = "2021"
description = "High-performance Mixpanel to PostHog migration tool"
authors = ["WorldPrediction Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for Basic Auth
base64 = "0.21"

# UUID generation for deduplication
uuid = { version = "1.6", features = ["v5"] }

# SHA256 hashing for deterministic UUIDs
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
